src/objects/Patient_Lead__c.object
<CustomObject>
    <description>Object used to record entries coming in from Lead Entry forms, which will later be copied to the Patient and Treatment objects.</description>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deserialized__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Shows whether the Patient Lead has been converted to patient/treatment objects.</description>
        <label>Deserialized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ins_Policy__c</fullName>
        <label>Insurance ID#</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_First_Name__c</fullName>
        <label>Patient First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Last_Name__c</fullName>
        <label>Patient Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Preferred_Language__c</fullName>
        <label>Preferred Language</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Social_Security_Number__c</fullName>
        <label>Social Security Number</label>
        <length>11</length>
        <maskChar>X</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Treatment_Lead_Entry__c</fullName>
        <label>Treatment Lead Entry</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Treatment_Note__c</fullName>
        <label>Treatment Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Treatment_Payment_Type__c</fullName>
        <label>Treatment Payment Type</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Treatment_Preferred_Destination__c</fullName>
        <label>Treatment Preferred Destination</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Treatment_Procedure_Category__c</fullName>
        <label>Treatment Procedure Category</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Treatment_Procedure__c</fullName>
        <label>Treatment Procedure</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Treatment_Referral_Source__c</fullName>
        <label>Treatment Referral Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Treatment_Referrer_Phone__c</fullName>
        <label>Treatment Referrer Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Treatment_Referrer__c</fullName>
        <label>Treatment Referrer</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Treatment_Referring_Provider_Fax__c</fullName>
        <label>Treatment Referring Provider Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Treatment_Referring_Provider_NPI__c</fullName>
        <label>Treatment Referring Provider NPI</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Treatment_Referring_Provider_Name__c</fullName>
        <label>Treatment Referring Provider Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Treatment_Referring_Provider_Phone__c</fullName>
        <label>Treatment Referring Provider Phone</label>
        <type>Phone</type>
    </fields>
    <label>Patient Lead</label>
    <nameField>
        <label>Patient Lead Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Patient Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>